# Zaid_QuadBtech

./: .gitignore  README.md
Aptos/Counter/: Move.toml
Aptos/Counter/sources/: counter.move
Aptos/gas-refund-demo/contract/: Move.toml
Aptos/lend-borrow/: Move.toml  output.md
Aptos/lend-borrow/sources/: lend_borrow_blockchain.move
ICP/day_01/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ICP/day_03_counter/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ICP/day_04_voting/: Cargo.toml  dfx.json  package-lock.json  package.json
ICP/day_05_Todo/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Solana/counter/: Anchor.toml  README.md  package-lock.json  package.json
Solana/counter/programs/counter/: Cargo.toml
Solana/counter/programs/counter/src/: lib.rs
Solana/counter_frontend/: package.json
Solana/day04/: nx.json  package-lock.json  vercel.json
Solana/day04token/: bosRyBuhdDYKKanJCxm1G4ZBYRJQjSXT1jsjgS9hnYc.json  metadata.json  mntUMYKLK3gfi35ijwu1zYGPmc1h3k2Kfdxv9EtxGbk.json
Solana/day05/: .gitignore  LICENSE  README.md  package.json  tsconfig.base.json
Solana/hello_project/: Anchor.toml
Solana/hello_project/programs/hello_project/: Cargo.toml
Solana/hello_project/programs/hello_project/src/: lib.rs
Solidity/Re-enterncy/: package-lock.json  package.json
Solidity/Storage/: package-lock.json  package.json
Solidity/crowdfunding-project/: package-lock.json  package.json
Solidity/gasTracker/: package-lock.json  package.json
crowdfunding-project/contracts/: CrowdFunding.sol
(+174 files in other folders)
